--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 @import url('./footer.css');
+@import url('./colors.css');
 
 body, html {
     margin: 0;
@@ -52,6 +53,7 @@ body, html {
     justify-content: flex-start;
     align-items: center;
     flex-direction: column;
+    position: relative;
 }
 
 .quiz-body-subhead {
@@ -59,11 +61,13 @@ body, html {
 }
 
 .quiz-card {
-    border: 1px solid var(--color-grey);
+    border: 1px solid var(--color-hover-light-grey);
+    border-radius: 4px;
     display: flex;
     flex-direction: column;
     width: fit-content;
     margin: 1rem;
+    box-shadow: 0px 0px 5px var(--color-hover-light-grey);
 }
 
 .quiz-card-image {
@@ -72,23 +76,30 @@ body, html {
 }
 
 .quiz-card-text, .quiz-cta-container {
-    padding: 0.5rem 1rem;
+    padding: 0 1rem;
+    margin: 0;
 }
 
 .quiz-title {
     font-size: 1.1rem;
 }
 
+.quiz-cta-container {
+    padding: 0 0.5rem;
+}
+
 .quiz-cta {
     display: flex;
     justify-content: center;
-    border: 1px solid var(--color-grey);
+    border-radius: 4px;
     padding: 0.5rem 1rem;
+    margin-bottom: 1rem;
+    font-weight: 400;
 }
 
-.btn-success-solid {
-    margin: 0;
-    width: fit-content;
+.quiz-cta:hover {
+    background-color: var(--color-grey);
+    color: var(--primary-bg);
 }
 
 /* Quiz body ends */
