feat: added the main quiz screen and signin/signup screens

--- a/css/colors.css
+++ b/css/colors.css
@@ -4,4 +4,5 @@
     /* --color-grey: #edf2f4; */
     --color-red: #ef233c;
     --color-red-dark: #d90429;
+    --color-hover-light-grey: #dbd7d7;
 }
