--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,9 @@
 @import url('./footer.css');
 @import url('./colors.css');
 @import url('./routes/categories.css');
-
-body, html {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
+@import url('./routes/quiz.css');
+@import url('./reset.css');
+@import url('./routes/login-signup.css');
 
 .primary-container {
     margin: 0;
@@ -49,4 +46,55 @@ body, html {
 
 .quiz-body-subhead {
     text-align: center;
+}
+
+.quiz-home .btn-home-cta {
+    width: fit-content;
+    border: 1px solid var(--color-button-solid-success);
+}
+
+/* Quiz screen */
+
+.rule {
+    line-height: 1.8rem;
+}
+
+.quiz-link {
+    color: var(--color-red);
+    text-decoration: underline;
+    text-underline-offset: 0.25rem;
+}
+
+.quiz-link:hover {
+    color: var(--color-red-dark);
+}
+
+/* Quiz screen ends */
+
+.left img {
+    max-width: 80%;
+}
+
+/* Media */
+
+@media screen and (max-width: 768px) {
+
+    .nav-main-ul {
+        padding: 0.5rem;
+    }
+
+    .nav-main-li {
+        margin: auto 0.5rem;
+    }
+
+    .btn {
+        width: fit-content;
+    }
+
+    .main-section {
+        position: relative;
+        flex-direction: column;
+        justify-content: center;
+        height: calc(100vh - 8.5rem);
+    }
 }
