--- a/css/routes/categories.css
+++ b/css/routes/categories.css
@@ -33,15 +33,18 @@
 
 .quiz-cta-container {
     padding: 0 0.5rem;
+    margin: 0.5rem auto;
+    width: 100%;
 }
 
-.quiz-cta {
+.quiz-cta-container .quiz-cta {
     display: flex;
     justify-content: center;
     border-radius: 4px;
     padding: 0.5rem 1rem;
     margin-bottom: 1rem;
     font-weight: 400;
+    width: 80%;
 }
 
 .quiz-cta:hover {
