--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,27 @@
     margin: 1rem 0;
 }
 
+.nav-item-search {
+    position: relative;
+}
+
+.nav-main-middle-icn {
+    height: 24px;
+    width: 24px;
+    position: absolute;
+    top: 0.5rem;
+    left: 0.5rem;
+}
+
+.nav-item-search-input[type=text] {
+    line-height: 1.5rem;
+    padding-left: 2rem;
+    border-radius: 0.2rem;
+    outline: none;
+    border: 1px solid var(--color-dark-grey);
+    width: 30rem
+}
+
 .nav-main-right {
     display: flex;
 }
@@ -98,6 +119,10 @@
 
     .nav-main-li {
         margin: auto 0.5rem;
+    }
+
+    .nav-main-middle {
+        display: none;
     }
 
     .btn {
