--- a/css/routes/quiz.css
+++ b/css/routes/quiz.css
@@ -34,6 +34,11 @@
     display: flex;
 }
 
+.btn-submit-quiz .quiz-submit-btn {
+    width: fit-content;
+    border: 1px solid var(--color-button-solid-success);
+}
+
 /* Media */
 
 @media screen and (max-width: 768px) {
