feat: user profile page added along with documentation

--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,7 @@
 @import url('./routes/quiz.css');
 @import url('./reset.css');
 @import url('./routes/login-signup.css');
+@import url('./user.css');
 
 .primary-container {
     margin: 0;
